--- a/index.html
+++ b/index.html
@@ -9,6 +9,44 @@
     <title>Playstation</title>
 </head>
 <body>
+    <div class="container">
+        <div class="navbar">
+            <img src="./images/logo.png" alt="" class="logo">
+            <nav>
+                <ul id="menuList">
+                    <li><a href="#">Game Controllers</a></li>
+                    <li><a href="#">VR Accessories</a></li>
+                    <li><a href="#">Media Remotes</a></li>
+                    <li><a href="#">Others</a></li>
+                </ul>
+            </nav>
+            <img src="./images/menu.png" alt="" class="menu-icon" onclick="togglemenu()">
+        </div>
+
+        <div class="row">
+            <div class="col-1">
+                <h2>PS4 V2 <br> Dualshock 4</h2>
+                <h3>Wireless Controller for PlayStation 4</h3>
+                <p>(Comptatible/Generic)</p>
+                <h4>$32.50</h4>
+                <button type="button">Buy Now <img src="./images/arrow.png" alt=""></button>
+            </div>
+            <div class="col-2">
+                <img src="images/controller.png" alt="" class="controller">
+                <div class="color-box"></div>
+                <div class="add-btn">
+                    <img src="images/add.png" alt="">
+                    <p><small>Add to Cart</small></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="social-links">
+            <img src="images/fb.png" alt="">
+            <img src="images/tw.png" alt="">
+            <img src="images/ig.png" alt="">
+        </div>
+    </div>
     
 
     <script src="./js/main.js"></script>
